[gd_scene load_steps=21 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/characters/player/player_default.png" type="Texture" id=2]
[ext_resource path="res://particles/Effects/SpawnEffect.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]

resource_name = "attackDown"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 182, 183, 184, 185, 186, 187 ]
}

[sub_resource type="Animation" id=2]

resource_name = "attackLeft"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 169, 170, 171, 172, 173, 174 ]
}

[sub_resource type="Animation" id=3]

resource_name = "attackRight"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 195, 196, 197, 198, 199, 200 ]
}

[sub_resource type="Animation" id=4]

resource_name = "attackUp"
length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 156, 157, 158, 159, 160, 161 ]
}

[sub_resource type="Animation" id=5]

resource_name = "dead"
length = 3.0
loop = false
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 260, 261, 262, 263, 264, 265 ]
}

[sub_resource type="Animation" id=6]

length = 0.9
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 130, 131, 132, 133, 134, 135, 136, 137, 138 ]
}

[sub_resource type="Animation" id=7]

length = 0.9
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 117, 118, 119, 120, 121, 122, 123, 124, 125 ]
}

[sub_resource type="Animation" id=8]

length = 0.9
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 143, 144, 145, 146, 147, 148, 149, 150, 151 ]
}

[sub_resource type="Animation" id=9]

resource_name = "spawning"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../SpawnEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 130, 130 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../SpawnEffect:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false ]
}

[sub_resource type="Animation" id=10]

length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 130, 131 ]
}

[sub_resource type="Animation" id=11]

length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 117 ]
}

[sub_resource type="Animation" id=12]

length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 143 ]
}

[sub_resource type="Animation" id=13]

length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 105, 106 ]
}

[sub_resource type="Animation" id=14]

length = 0.9
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 104, 105, 106, 107, 108, 109, 110, 111, 112 ]
}

[sub_resource type="Animation" id=15]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../SpawnEffect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[sub_resource type="CircleShape2D" id=16]

custom_solver_bias = 0.0
radius = 12.0

[sub_resource type="RectangleShape2D" id=17]

custom_solver_bias = 0.0
extents = Vector2( 30, 45 )

[node name="player" type="KinematicBody2D" index="0"]

pause_mode = 2
light_mask = 29
input_pickable = false
collision_layer = 2
collision_mask = 29
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "Visibility", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="PlayerSprite" type="Sprite" parent="." index="0"]

scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 2 )
vframes = 21
hframes = 13
frame = 130
_sections_unfolded = [ "Animation", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerSprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 0
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attackDown = SubResource( 1 )
anims/attackLeft = SubResource( 2 )
anims/attackRight = SubResource( 3 )
anims/attackUp = SubResource( 4 )
anims/dead = SubResource( 5 )
anims/down = SubResource( 6 )
anims/left = SubResource( 7 )
anims/right = SubResource( 8 )
anims/spawning = SubResource( 9 )
anims/standingDown = SubResource( 10 )
anims/standingLeft = SubResource( 11 )
anims/standingRight = SubResource( 12 )
anims/standingUp = SubResource( 13 )
anims/up = SubResource( 14 )
anims/victory = SubResource( 15 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Camera2D" type="Camera2D" parent="." index="1"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Editor", "Offset", "Smoothing", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 0, 10 )
shape = SubResource( 16 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="playerRayCast" type="RayCast2D" parent="." index="3"]

visible = false
light_mask = 4
scale = Vector2( 1, 25 )
enabled = false
exclude_parent = true
cast_to = Vector2( 60, 0 )
collision_mask = 4
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="disappearTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AttackRay" type="Area2D" parent="." index="5"]

position = Vector2( 39.7352, 19.8116 )
scale = Vector2( 1.30422, 1.25133 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRay" index="0"]

shape = SubResource( 17 )
_sections_unfolded = [ "Transform" ]

[node name="SpawnEffect" parent="." index="5" instance=ExtResource( 3 )]

visible = false
emitting = false


